[tool.poetry]
name = "poetry-homework"
version = "0.1.0"
description = ""
authors = ["Aleksei <trrskv@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_homework"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "^1.0.2"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
